parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ERROR

Grammar

Rule 0     S' -> program
Rule 1     program -> declist MAIN LRB RRB block
Rule 2     program -> MAIN LRB RRB block
Rule 3     declist -> dec
Rule 4     declist -> declist dec
Rule 5     dec -> vardec
Rule 6     dec -> funcdec
Rule 7     type -> INTEGER
Rule 8     type -> FLOAT
Rule 9     type -> BOOLEAN
Rule 10    iddec -> ID
Rule 11    iddec -> ID LSB exp RSB
Rule 12    iddec -> ID ASSIGN exp
Rule 13    idlist -> iddec
Rule 14    idlist -> idlist COMMA iddec
Rule 15    vardec -> idlist COLON type SEMICOLON
Rule 16    funcdec -> FUNCTION ID LRB paramdecs RRB COLON type block
Rule 17    funcdec -> FUNCTION ID LRB paramdecs RRB block
Rule 18    paramdecs -> paramdecslist
Rule 19    paramdecs -> empty
Rule 20    paramdecslist -> paramdec
Rule 21    paramdecslist -> paramdecslist COMMA paramdec
Rule 22    paramdec -> ID COLON type
Rule 23    paramdec -> ID LSB RSB COLON type
Rule 24    block -> LCB stmtlist RCB
Rule 25    stmtlist -> stmtlist stmt
Rule 26    stmtlist -> empty
Rule 27    lvalue -> ID
Rule 28    lvalue -> ID LSB exp RSB
Rule 29    case -> WHERE const COLON stmtlist
Rule 30    cases -> cases case
Rule 31    cases -> empty
Rule 32    stmt -> RETURN exp SEMICOLON
Rule 33    stmt -> exp SEMICOLON
Rule 34    stmt -> block
Rule 35    stmt -> vardec
Rule 36    stmt -> WHILE LRB exp RRB stmt
Rule 37    stmt -> ON LRB exp RRB LCB cases RCB SEMICOLON
Rule 38    stmt -> FOR LRB exp SEMICOLON exp SEMICOLON exp RRB stmt
Rule 39    stmt -> FOR LRB ID IN ID RRB stmt
Rule 40    stmt -> IF LRB exp RRB stmt elseiflist
Rule 41    stmt -> IF LRB exp RRB stmt elseiflist ELSE stmt
Rule 42    stmt -> PRINT LRB ID RRB SEMICOLON
Rule 43    elseiflist -> elseiflist ELSEIF LRB exp RRB stmt
Rule 44    elseiflist -> empty
Rule 45    exp -> lvalue ASSIGN exp
Rule 46    exp -> exp GT exp
Rule 47    exp -> exp LT exp
Rule 48    exp -> exp NE exp
Rule 49    exp -> exp EQ exp
Rule 50    exp -> exp LE exp
Rule 51    exp -> exp GE exp
Rule 52    exp -> exp AND exp
Rule 53    exp -> exp OR exp
Rule 54    exp -> exp SUM exp
Rule 55    exp -> exp SUB exp
Rule 56    exp -> exp MUL exp
Rule 57    exp -> exp DIV exp
Rule 58    exp -> exp MOD exp
Rule 59    exp -> const
Rule 60    exp -> lvalue
Rule 61    exp -> ID LRB explist RRB
Rule 62    exp -> LRB exp RRB
Rule 63    exp -> ID LRB RRB
Rule 64    exp -> SUB exp
Rule 65    exp -> NOT exp
Rule 66    const -> INTEGERNUMBER
Rule 67    const -> FLOATNUMBER
Rule 68    const -> TRUE
Rule 69    const -> FALSE
Rule 70    explist -> exp
Rule 71    explist -> explist COMMA exp
Rule 72    empty -> <empty>

Terminals, with rules where they appear

AND                  : 52
ASSIGN               : 12 45
BOOLEAN              : 9
COLON                : 15 16 22 23 29
COMMA                : 14 21 71
DIV                  : 57
ELSE                 : 41
ELSEIF               : 43
EQ                   : 49
ERROR                : 
FALSE                : 69
FLOAT                : 8
FLOATNUMBER          : 67
FOR                  : 38 39
FUNCTION             : 16 17
GE                   : 51
GT                   : 46
ID                   : 10 11 12 16 17 22 23 27 28 39 39 42 61 63
IF                   : 40 41
IN                   : 39
INTEGER              : 7
INTEGERNUMBER        : 66
LCB                  : 24 37
LE                   : 50
LRB                  : 1 2 16 17 36 37 38 39 40 41 42 43 61 62 63
LSB                  : 11 23 28
LT                   : 47
MAIN                 : 1 2
MOD                  : 58
MUL                  : 56
NE                   : 48
NOT                  : 65
ON                   : 37
OR                   : 53
PRINT                : 42
RCB                  : 24 37
RETURN               : 32
RRB                  : 1 2 16 17 36 37 38 39 40 41 42 43 61 62 63
RSB                  : 11 23 28
SEMICOLON            : 15 32 33 37 38 38 42
SUB                  : 55 64
SUM                  : 54
TRUE                 : 68
WHERE                : 29
WHILE                : 36
error                : 

Nonterminals, with rules where they appear

block                : 1 2 16 17 34
case                 : 30
cases                : 30 37
const                : 29 59
dec                  : 3 4
declist              : 1 4
elseiflist           : 40 41 43
empty                : 19 26 31 44
exp                  : 11 12 28 32 33 36 37 38 38 38 40 41 43 45 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 53 54 54 55 55 56 56 57 57 58 58 62 64 65 70 71
explist              : 61 71
funcdec              : 6
iddec                : 13 14
idlist               : 14 15
lvalue               : 45 60
paramdec             : 20 21
paramdecs            : 16 17
paramdecslist        : 18 21
program              : 0
stmt                 : 25 36 38 39 40 41 41 43
stmtlist             : 24 25 29
type                 : 15 16 22 23
vardec               : 5 35

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . declist MAIN LRB RRB block
    (2) program -> . MAIN LRB RRB block
    (3) declist -> . dec
    (4) declist -> . declist dec
    (5) dec -> . vardec
    (6) dec -> . funcdec
    (15) vardec -> . idlist COLON type SEMICOLON
    (16) funcdec -> . FUNCTION ID LRB paramdecs RRB COLON type block
    (17) funcdec -> . FUNCTION ID LRB paramdecs RRB block
    (13) idlist -> . iddec
    (14) idlist -> . idlist COMMA iddec
    (10) iddec -> . ID
    (11) iddec -> . ID LSB exp RSB
    (12) iddec -> . ID ASSIGN exp

    MAIN            shift and go to state 3
    FUNCTION        shift and go to state 8
    ID              shift and go to state 9

    program                        shift and go to state 1
    declist                        shift and go to state 2
    dec                            shift and go to state 4
    vardec                         shift and go to state 5
    funcdec                        shift and go to state 6
    idlist                         shift and go to state 7
    iddec                          shift and go to state 10

state 1

    (0) S' -> program .



state 2

    (1) program -> declist . MAIN LRB RRB block
    (4) declist -> declist . dec
    (5) dec -> . vardec
    (6) dec -> . funcdec
    (15) vardec -> . idlist COLON type SEMICOLON
    (16) funcdec -> . FUNCTION ID LRB paramdecs RRB COLON type block
    (17) funcdec -> . FUNCTION ID LRB paramdecs RRB block
    (13) idlist -> . iddec
    (14) idlist -> . idlist COMMA iddec
    (10) iddec -> . ID
    (11) iddec -> . ID LSB exp RSB
    (12) iddec -> . ID ASSIGN exp

    MAIN            shift and go to state 11
    FUNCTION        shift and go to state 8
    ID              shift and go to state 9

    dec                            shift and go to state 12
    vardec                         shift and go to state 5
    funcdec                        shift and go to state 6
    idlist                         shift and go to state 7
    iddec                          shift and go to state 10

state 3

    (2) program -> MAIN . LRB RRB block

    LRB             shift and go to state 13


state 4

    (3) declist -> dec .

    MAIN            reduce using rule 3 (declist -> dec .)
    FUNCTION        reduce using rule 3 (declist -> dec .)
    ID              reduce using rule 3 (declist -> dec .)


state 5

    (5) dec -> vardec .

    MAIN            reduce using rule 5 (dec -> vardec .)
    FUNCTION        reduce using rule 5 (dec -> vardec .)
    ID              reduce using rule 5 (dec -> vardec .)


state 6

    (6) dec -> funcdec .

    MAIN            reduce using rule 6 (dec -> funcdec .)
    FUNCTION        reduce using rule 6 (dec -> funcdec .)
    ID              reduce using rule 6 (dec -> funcdec .)


state 7

    (15) vardec -> idlist . COLON type SEMICOLON
    (14) idlist -> idlist . COMMA iddec

    COLON           shift and go to state 14
    COMMA           shift and go to state 15


state 8

    (16) funcdec -> FUNCTION . ID LRB paramdecs RRB COLON type block
    (17) funcdec -> FUNCTION . ID LRB paramdecs RRB block

    ID              shift and go to state 16


state 9

    (10) iddec -> ID .
    (11) iddec -> ID . LSB exp RSB
    (12) iddec -> ID . ASSIGN exp

    COLON           reduce using rule 10 (iddec -> ID .)
    COMMA           reduce using rule 10 (iddec -> ID .)
    LSB             shift and go to state 17
    ASSIGN          shift and go to state 18


state 10

    (13) idlist -> iddec .

    COLON           reduce using rule 13 (idlist -> iddec .)
    COMMA           reduce using rule 13 (idlist -> iddec .)


state 11

    (1) program -> declist MAIN . LRB RRB block

    LRB             shift and go to state 19


state 12

    (4) declist -> declist dec .

    MAIN            reduce using rule 4 (declist -> declist dec .)
    FUNCTION        reduce using rule 4 (declist -> declist dec .)
    ID              reduce using rule 4 (declist -> declist dec .)


state 13

    (2) program -> MAIN LRB . RRB block

    RRB             shift and go to state 20


state 14

    (15) vardec -> idlist COLON . type SEMICOLON
    (7) type -> . INTEGER
    (8) type -> . FLOAT
    (9) type -> . BOOLEAN

    INTEGER         shift and go to state 22
    FLOAT           shift and go to state 23
    BOOLEAN         shift and go to state 24

    type                           shift and go to state 21

state 15

    (14) idlist -> idlist COMMA . iddec
    (10) iddec -> . ID
    (11) iddec -> . ID LSB exp RSB
    (12) iddec -> . ID ASSIGN exp

    ID              shift and go to state 9

    iddec                          shift and go to state 25

state 16

    (16) funcdec -> FUNCTION ID . LRB paramdecs RRB COLON type block
    (17) funcdec -> FUNCTION ID . LRB paramdecs RRB block

    LRB             shift and go to state 26


state 17

    (11) iddec -> ID LSB . exp RSB
    (45) exp -> . lvalue ASSIGN exp
    (46) exp -> . exp GT exp
    (47) exp -> . exp LT exp
    (48) exp -> . exp NE exp
    (49) exp -> . exp EQ exp
    (50) exp -> . exp LE exp
    (51) exp -> . exp GE exp
    (52) exp -> . exp AND exp
    (53) exp -> . exp OR exp
    (54) exp -> . exp SUM exp
    (55) exp -> . exp SUB exp
    (56) exp -> . exp MUL exp
    (57) exp -> . exp DIV exp
    (58) exp -> . exp MOD exp
    (59) exp -> . const
    (60) exp -> . lvalue
    (61) exp -> . ID LRB explist RRB
    (62) exp -> . LRB exp RRB
    (63) exp -> . ID LRB RRB
    (64) exp -> . SUB exp
    (65) exp -> . NOT exp
    (27) lvalue -> . ID
    (28) lvalue -> . ID LSB exp RSB
    (66) const -> . INTEGERNUMBER
    (67) const -> . FLOATNUMBER
    (68) const -> . TRUE
    (69) const -> . FALSE

    ID              shift and go to state 27
    LRB             shift and go to state 32
    SUB             shift and go to state 30
    NOT             shift and go to state 33
    INTEGERNUMBER   shift and go to state 34
    FLOATNUMBER     shift and go to state 35
    TRUE            shift and go to state 36
    FALSE           shift and go to state 37

    exp                            shift and go to state 28
    lvalue                         shift and go to state 29
    const                          shift and go to state 31

state 18

    (12) iddec -> ID ASSIGN . exp
    (45) exp -> . lvalue ASSIGN exp
    (46) exp -> . exp GT exp
    (47) exp -> . exp LT exp
    (48) exp -> . exp NE exp
    (49) exp -> . exp EQ exp
    (50) exp -> . exp LE exp
    (51) exp -> . exp GE exp
    (52) exp -> . exp AND exp
    (53) exp -> . exp OR exp
    (54) exp -> . exp SUM exp
    (55) exp -> . exp SUB exp
    (56) exp -> . exp MUL exp
    (57) exp -> . exp DIV exp
    (58) exp -> . exp MOD exp
    (59) exp -> . const
    (60) exp -> . lvalue
    (61) exp -> . ID LRB explist RRB
    (62) exp -> . LRB exp RRB
    (63) exp -> . ID LRB RRB
    (64) exp -> . SUB exp
    (65) exp -> . NOT exp
    (27) lvalue -> . ID
    (28) lvalue -> . ID LSB exp RSB
    (66) const -> . INTEGERNUMBER
    (67) const -> . FLOATNUMBER
    (68) const -> . TRUE
    (69) const -> . FALSE

    ID              shift and go to state 27
    LRB             shift and go to state 32
    SUB             shift and go to state 30
    NOT             shift and go to state 33
    INTEGERNUMBER   shift and go to state 34
    FLOATNUMBER     shift and go to state 35
    TRUE            shift and go to state 36
    FALSE           shift and go to state 37

    exp                            shift and go to state 38
    lvalue                         shift and go to state 29
    const                          shift and go to state 31

state 19

    (1) program -> declist MAIN LRB . RRB block

    RRB             shift and go to state 39


state 20

    (2) program -> MAIN LRB RRB . block
    (24) block -> . LCB stmtlist RCB

    LCB             shift and go to state 41

    block                          shift and go to state 40

state 21

    (15) vardec -> idlist COLON type . SEMICOLON

    SEMICOLON       shift and go to state 42


state 22

    (7) type -> INTEGER .

    SEMICOLON       reduce using rule 7 (type -> INTEGER .)
    COMMA           reduce using rule 7 (type -> INTEGER .)
    RRB             reduce using rule 7 (type -> INTEGER .)
    LCB             reduce using rule 7 (type -> INTEGER .)


state 23

    (8) type -> FLOAT .

    SEMICOLON       reduce using rule 8 (type -> FLOAT .)
    COMMA           reduce using rule 8 (type -> FLOAT .)
    RRB             reduce using rule 8 (type -> FLOAT .)
    LCB             reduce using rule 8 (type -> FLOAT .)


state 24

    (9) type -> BOOLEAN .

    SEMICOLON       reduce using rule 9 (type -> BOOLEAN .)
    COMMA           reduce using rule 9 (type -> BOOLEAN .)
    RRB             reduce using rule 9 (type -> BOOLEAN .)
    LCB             reduce using rule 9 (type -> BOOLEAN .)


state 25

    (14) idlist -> idlist COMMA iddec .

    COLON           reduce using rule 14 (idlist -> idlist COMMA iddec .)
    COMMA           reduce using rule 14 (idlist -> idlist COMMA iddec .)


state 26

    (16) funcdec -> FUNCTION ID LRB . paramdecs RRB COLON type block
    (17) funcdec -> FUNCTION ID LRB . paramdecs RRB block
    (18) paramdecs -> . paramdecslist
    (19) paramdecs -> . empty
    (20) paramdecslist -> . paramdec
    (21) paramdecslist -> . paramdecslist COMMA paramdec
    (72) empty -> .
    (22) paramdec -> . ID COLON type
    (23) paramdec -> . ID LSB RSB COLON type

    RRB             reduce using rule 72 (empty -> .)
    ID              shift and go to state 43

    paramdecs                      shift and go to state 44
    paramdecslist                  shift and go to state 45
    empty                          shift and go to state 46
    paramdec                       shift and go to state 47

state 27

    (61) exp -> ID . LRB explist RRB
    (63) exp -> ID . LRB RRB
    (27) lvalue -> ID .
    (28) lvalue -> ID . LSB exp RSB

    LRB             shift and go to state 48
    ASSIGN          reduce using rule 27 (lvalue -> ID .)
    RSB             reduce using rule 27 (lvalue -> ID .)
    GT              reduce using rule 27 (lvalue -> ID .)
    LT              reduce using rule 27 (lvalue -> ID .)
    NE              reduce using rule 27 (lvalue -> ID .)
    EQ              reduce using rule 27 (lvalue -> ID .)
    LE              reduce using rule 27 (lvalue -> ID .)
    GE              reduce using rule 27 (lvalue -> ID .)
    AND             reduce using rule 27 (lvalue -> ID .)
    OR              reduce using rule 27 (lvalue -> ID .)
    SUM             reduce using rule 27 (lvalue -> ID .)
    SUB             reduce using rule 27 (lvalue -> ID .)
    MUL             reduce using rule 27 (lvalue -> ID .)
    DIV             reduce using rule 27 (lvalue -> ID .)
    MOD             reduce using rule 27 (lvalue -> ID .)
    COLON           reduce using rule 27 (lvalue -> ID .)
    COMMA           reduce using rule 27 (lvalue -> ID .)
    RRB             reduce using rule 27 (lvalue -> ID .)
    SEMICOLON       reduce using rule 27 (lvalue -> ID .)
    LSB             shift and go to state 49


state 28

    (11) iddec -> ID LSB exp . RSB
    (46) exp -> exp . GT exp
    (47) exp -> exp . LT exp
    (48) exp -> exp . NE exp
    (49) exp -> exp . EQ exp
    (50) exp -> exp . LE exp
    (51) exp -> exp . GE exp
    (52) exp -> exp . AND exp
    (53) exp -> exp . OR exp
    (54) exp -> exp . SUM exp
    (55) exp -> exp . SUB exp
    (56) exp -> exp . MUL exp
    (57) exp -> exp . DIV exp
    (58) exp -> exp . MOD exp

    RSB             shift and go to state 50
    GT              shift and go to state 51
    LT              shift and go to state 52
    NE              shift and go to state 53
    EQ              shift and go to state 54
    LE              shift and go to state 55
    GE              shift and go to state 56
    AND             shift and go to state 57
    OR              shift and go to state 58
    SUM             shift and go to state 59
    SUB             shift and go to state 60
    MUL             shift and go to state 61
    DIV             shift and go to state 62
    MOD             shift and go to state 63


state 29

    (45) exp -> lvalue . ASSIGN exp
    (60) exp -> lvalue .

    ASSIGN          shift and go to state 64
    RSB             reduce using rule 60 (exp -> lvalue .)
    GT              reduce using rule 60 (exp -> lvalue .)
    LT              reduce using rule 60 (exp -> lvalue .)
    NE              reduce using rule 60 (exp -> lvalue .)
    EQ              reduce using rule 60 (exp -> lvalue .)
    LE              reduce using rule 60 (exp -> lvalue .)
    GE              reduce using rule 60 (exp -> lvalue .)
    AND             reduce using rule 60 (exp -> lvalue .)
    OR              reduce using rule 60 (exp -> lvalue .)
    SUM             reduce using rule 60 (exp -> lvalue .)
    SUB             reduce using rule 60 (exp -> lvalue .)
    MUL             reduce using rule 60 (exp -> lvalue .)
    DIV             reduce using rule 60 (exp -> lvalue .)
    MOD             reduce using rule 60 (exp -> lvalue .)
    COLON           reduce using rule 60 (exp -> lvalue .)
    COMMA           reduce using rule 60 (exp -> lvalue .)
    RRB             reduce using rule 60 (exp -> lvalue .)
    SEMICOLON       reduce using rule 60 (exp -> lvalue .)


state 30

    (64) exp -> SUB . exp
    (45) exp -> . lvalue ASSIGN exp
    (46) exp -> . exp GT exp
    (47) exp -> . exp LT exp
    (48) exp -> . exp NE exp
    (49) exp -> . exp EQ exp
    (50) exp -> . exp LE exp
    (51) exp -> . exp GE exp
    (52) exp -> . exp AND exp
    (53) exp -> . exp OR exp
    (54) exp -> . exp SUM exp
    (55) exp -> . exp SUB exp
    (56) exp -> . exp MUL exp
    (57) exp -> . exp DIV exp
    (58) exp -> . exp MOD exp
    (59) exp -> . const
    (60) exp -> . lvalue
    (61) exp -> . ID LRB explist RRB
    (62) exp -> . LRB exp RRB
    (63) exp -> . ID LRB RRB
    (64) exp -> . SUB exp
    (65) exp -> . NOT exp
    (27) lvalue -> . ID
    (28) lvalue -> . ID LSB exp RSB
    (66) const -> . INTEGERNUMBER
    (67) const -> . FLOATNUMBER
    (68) const -> . TRUE
    (69) const -> . FALSE

    ID              shift and go to state 27
    LRB             shift and go to state 32
    SUB             shift and go to state 30
    NOT             shift and go to state 33
    INTEGERNUMBER   shift and go to state 34
    FLOATNUMBER     shift and go to state 35
    TRUE            shift and go to state 36
    FALSE           shift and go to state 37

    exp                            shift and go to state 65
    lvalue                         shift and go to state 29
    const                          shift and go to state 31

state 31

    (59) exp -> const .

    RSB             reduce using rule 59 (exp -> const .)
    GT              reduce using rule 59 (exp -> const .)
    LT              reduce using rule 59 (exp -> const .)
    NE              reduce using rule 59 (exp -> const .)
    EQ              reduce using rule 59 (exp -> const .)
    LE              reduce using rule 59 (exp -> const .)
    GE              reduce using rule 59 (exp -> const .)
    AND             reduce using rule 59 (exp -> const .)
    OR              reduce using rule 59 (exp -> const .)
    SUM             reduce using rule 59 (exp -> const .)
    SUB             reduce using rule 59 (exp -> const .)
    MUL             reduce using rule 59 (exp -> const .)
    DIV             reduce using rule 59 (exp -> const .)
    MOD             reduce using rule 59 (exp -> const .)
    COLON           reduce using rule 59 (exp -> const .)
    COMMA           reduce using rule 59 (exp -> const .)
    RRB             reduce using rule 59 (exp -> const .)
    SEMICOLON       reduce using rule 59 (exp -> const .)


state 32

    (62) exp -> LRB . exp RRB
    (45) exp -> . lvalue ASSIGN exp
    (46) exp -> . exp GT exp
    (47) exp -> . exp LT exp
    (48) exp -> . exp NE exp
    (49) exp -> . exp EQ exp
    (50) exp -> . exp LE exp
    (51) exp -> . exp GE exp
    (52) exp -> . exp AND exp
    (53) exp -> . exp OR exp
    (54) exp -> . exp SUM exp
    (55) exp -> . exp SUB exp
    (56) exp -> . exp MUL exp
    (57) exp -> . exp DIV exp
    (58) exp -> . exp MOD exp
    (59) exp -> . const
    (60) exp -> . lvalue
    (61) exp -> . ID LRB explist RRB
    (62) exp -> . LRB exp RRB
    (63) exp -> . ID LRB RRB
    (64) exp -> . SUB exp
    (65) exp -> . NOT exp
    (27) lvalue -> . ID
    (28) lvalue -> . ID LSB exp RSB
    (66) const -> . INTEGERNUMBER
    (67) const -> . FLOATNUMBER
    (68) const -> . TRUE
    (69) const -> . FALSE

    ID              shift and go to state 27
    LRB             shift and go to state 32
    SUB             shift and go to state 30
    NOT             shift and go to state 33
    INTEGERNUMBER   shift and go to state 34
    FLOATNUMBER     shift and go to state 35
    TRUE            shift and go to state 36
    FALSE           shift and go to state 37

    exp                            shift and go to state 66
    lvalue                         shift and go to state 29
    const                          shift and go to state 31

state 33

    (65) exp -> NOT . exp
    (45) exp -> . lvalue ASSIGN exp
    (46) exp -> . exp GT exp
    (47) exp -> . exp LT exp
    (48) exp -> . exp NE exp
    (49) exp -> . exp EQ exp
    (50) exp -> . exp LE exp
    (51) exp -> . exp GE exp
    (52) exp -> . exp AND exp
    (53) exp -> . exp OR exp
    (54) exp -> . exp SUM exp
    (55) exp -> . exp SUB exp
    (56) exp -> . exp MUL exp
    (57) exp -> . exp DIV exp
    (58) exp -> . exp MOD exp
    (59) exp -> . const
    (60) exp -> . lvalue
    (61) exp -> . ID LRB explist RRB
    (62) exp -> . LRB exp RRB
    (63) exp -> . ID LRB RRB
    (64) exp -> . SUB exp
    (65) exp -> . NOT exp
    (27) lvalue -> . ID
    (28) lvalue -> . ID LSB exp RSB
    (66) const -> . INTEGERNUMBER
    (67) const -> . FLOATNUMBER
    (68) const -> . TRUE
    (69) const -> . FALSE

    ID              shift and go to state 27
    LRB             shift and go to state 32
    SUB             shift and go to state 30
    NOT             shift and go to state 33
    INTEGERNUMBER   shift and go to state 34
    FLOATNUMBER     shift and go to state 35
    TRUE            shift and go to state 36
    FALSE           shift and go to state 37

    exp                            shift and go to state 67
    lvalue                         shift and go to state 29
    const                          shift and go to state 31

state 34

    (66) const -> INTEGERNUMBER .
